# terraform-google-ai-platform-notification

./: .gitignore  .release-it.json  .terraform-docs.yml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  main.tf  outputs.tf  release.hbs  variables.tf
.cloudbuild/: cloudbuild.yaml
.github/workflows/: config.yml  unit-test.yml
cloudrun/: Dockerfile  docker-compose.yml  pyproject.toml
cloudrun/data/: cancelled.json  failed.json  pubsub_message.json  succeeded.json
cloudrun/server/: data.py  main.py
cloudrun/tests/: test_messages.py
examples/: main.tf  variables.tf  versions.tf
functions/: _logging.py  data.py  main.py  requirements.txt  test_messages.py
functions/data/: failed.json  pubsub_event.json  queued.json
functions/tests/: test_messages.py
